Bug 1657892 - Cache variation axes in the UnscaledFontMac to accelerate font instantiations. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D86475